--- a/src/pages/galleryPage/galleryPage.css
+++ b/src/pages/galleryPage/galleryPage.css
@@ -28,7 +28,7 @@
         url('../../images/texture.png'); */
     /* settled for solid color */
     background-color: var(--shade-gallery);
-    /* background-color: #004fc599; */
+    /* background-color: #04c22061; */
     background-image: url('../../images/texture.png');
 
     /* background-position: center; */
@@ -128,7 +128,7 @@
     width: 85%;
     font-size: 5dvh;
     font-weight: 700;
-    z-index: 5;
+    /* z-index: 5; */
     text-align: center;
     color: whitesmoke;
     text-shadow:
@@ -142,7 +142,7 @@
 .displayLine {
     border: 1px solid black;
     width: 90%;
-    z-index: 5;
+    /* z-index: 5; */
 }
 
 .displayDescription {
@@ -150,7 +150,7 @@
     /* height: 20%; */
     width: 80%;
     text-align: center;
-    z-index: 5;
+    /* z-index: 5; */
 }
 
 
