--- a/src/pages/groupDisplay/groupDisplay.css
+++ b/src/pages/groupDisplay/groupDisplay.css
@@ -8,6 +8,7 @@
     flex-flow: column nowrap;
     justify-content: flex-start;
     align-items: center;
+
 }
 
 .groupDisplay::after {
@@ -25,7 +26,6 @@
     opacity: 0.5;
 }
 
-
 .groupTitle {
     /* border: 2px solid white; */
     width: 90%;
@@ -33,4 +33,31 @@
     top: 5%;
     font-size: 8dvh;
     text-align: right;
+}
+
+.returnButton,
+.groupCommission {
+    border: none;
+    width: 11dvh;
+    height: 11dvh;
+    border-radius: 50%;
+
+    position: absolute;
+    z-index: 30;
+    bottom: 5%;
+    background-color: rgba(255, 255, 255, 0.676);
+    box-shadow: 0 0 8px black;
+    font-size: 22px;
+    display: flex;
+    flex-flow: column nowrap;
+    justify-content: center;
+    align-items: center;
+
+}
+.returnButton {
+    left: 5%;
+}
+
+.groupCommission {
+    right: 5%;
 }
