--- a/src/pages/galleryPage/galleryPage.css
+++ b/src/pages/galleryPage/galleryPage.css
@@ -121,7 +121,7 @@
     position: absolute;
     top: 5%;
     left: 3%;
-    filter: drop-shadow(2px 2px 10px #000000bf);
+    filter: drop-shadow(0px 0px 12px #000000);
 }
 
 .displayTitle {
