--- a/src/pages/groupDisplay/groupDisplay.css
+++ b/src/pages/groupDisplay/groupDisplay.css
@@ -37,27 +37,23 @@
 
 .returnButton,
 .groupCommission {
+    background-color: transparent;
     border: none;
-    width: 11dvh;
-    height: 11dvh;
-    border-radius: 50%;
-
     position: absolute;
     z-index: 30;
     bottom: 5%;
-    background-color: rgba(255, 255, 255, 0.676);
-    box-shadow: 0 0 8px black;
-    font-size: 22px;
-    display: flex;
-    flex-flow: column nowrap;
-    justify-content: center;
-    align-items: center;
-
-}
-.returnButton {
-    left: 5%;
+    left: 5%; 
 }
 
 .groupCommission {
+    left: auto;
     right: 5%;
+}
+
+.returnButton svg,
+.groupCommission svg {
+    width: 110px;
+    height: 110px;
+    color: #ffffff22;
+    stroke-width: 3;
 }
