--- a/src/components/progressiveImage/progressiveImage.css
+++ b/src/components/progressiveImage/progressiveImage.css
@@ -1,18 +1,13 @@
-.progressive-container {
-    position: relative;
-    height: 100%;
-    width: 100%;
-
-}
 
 .progressive-Img {
-    width: 100%;
-    height: 100%;
-    position: absolute;
-    top: 0;
-    left: 0;
+    width: 85%;
+    height: 85%;
     object-fit: contain;
-    /* filter: blur(10px); */
-    transition: opacity 0.5s ease-out;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    transition: filter 0.25s ease-out;
+
 }
 
