--- a/src/components/progressiveImage/progressiveImage.css
+++ b/src/components/progressiveImage/progressiveImage.css
@@ -9,5 +9,7 @@
     transform: translate(-50%, -50%);
     transition: filter 0.25s ease-out;
 
+    /* this misbehaves with animations sometimes */
+    filter: drop-shadow(0px 0px 2px #000000); 
 }
 
