--- a/src/components/progressiveImage/progressiveImage.css
+++ b/src/components/progressiveImage/progressiveImage.css
@@ -1,15 +1,39 @@
 
-.progressive-Img {
-    width: 85%;
-    height: 85%;
-    object-fit: contain;
+.progressive-wrapper {
+    /* border: 2px solid green; */
+    position: relative;
+    /* display: inline-block; */
+    width: 100%;
+    height: 100%;
+}
+
+.progressive-img {
+    /* border: 2px solid magenta; */
     position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    transition: filter 0.25s ease-out;
-
-    /* this misbehaves with animations sometimes */
+    width: 90%;
+    height: 90%;
+    object-fit: contain;
     filter: drop-shadow(0px 0px 2px #000000); 
+    transition: opacity 0.5s ease-in-out, filter 0.25s ease-in-out; 
+
 }
 
+.low-res {
+    filter: blur(2px);
+    opacity: 1;
+}
+
+.fade-out {
+    opacity: 0;
+}
+
+.high-res {
+    opacity: 0;
+}
+
+.fade-in {
+    opacity: 1;
+}
