--- a/src/pages/galleryPage/galleryPage.css
+++ b/src/pages/galleryPage/galleryPage.css
@@ -64,7 +64,7 @@
 }
 
 .sectionButtons {
-    /* border: 2px solid goldenrod; */
+    border: 2px solid goldenrod;
     width: 100%;
     height: 15dvh;
     display: flex;
@@ -75,7 +75,7 @@
 }
 
 .contentContainer {
-    /* border: 2px solid pink; */
+    border: 2px solid pink;
     position: relative;
     flex: 1;
     width: 95%;
@@ -102,7 +102,7 @@
 }
 
 .displayContent {
-    /* border: 2px solid lime; */
+    border: 2px solid lime;
     width: 100%;
     height: 52%;
     display: flex;
@@ -153,8 +153,6 @@
     /* z-index: 5; */
 }
 
-
-
 .homeLink {
     font-size: 45px;
     width: 50px;
@@ -195,23 +193,13 @@
         display: flex;
         align-items: flex-start;
     }
-
-    .resumeSlideShow {
-        border: 2px solid yellow;
-        position: absolute;
-        bottom: 0;
-        right: 0;
-        width: 4dvw;
-        height: 20dvh;
-        writing-mode: vertical-rl;
-    }
 }
 
 
 
 .galleryButton-container {
     /* border: 2px solid green; */
-    position: absolute;
+    /* position: absolute; */
     bottom: 7%;
     height: 9%;
     width: 50%;
