--- a/src/pages/galleryPage/galleryComponents/menuSection/menuSection.css
+++ b/src/pages/galleryPage/galleryComponents/menuSection/menuSection.css
@@ -1,30 +1,82 @@
 .menuSection {
-    border: 2px solid lime;
-    height: 65%;
+    /* border: 2px solid lime; */
+    height: 97%;
+    width: 100%;
+    display: flex;
+    flex-flow: column nowrap;
+    justify-content: flex-start;
+    align-items: center;
+    gap: 20px;
+}
+
+.menuTitle {
+    width: 100%;
+    color: #f8f8ff;
+    font-size: 60px;
+    font-weight: 900;
+    padding-left: 20px;
+}
+
+.menu-subTitle {
+    color: #f8f8ff;
+    font-size: 20px;
+    font-weight: 200;
+    text-decoration: underline;
+}
+
+
+
+.sectionItems,
+.displayItems {
+    /* border: 2px solid magenta; */
+    padding: 0 10px;
     width: 100%;
     display: flex;
     flex-flow: row nowrap;
     justify-content: center;
     align-items: flex-start;
-    gap: 10px;
+    gap: 7px;
 }
 
-.sectionItems,
 .displayItems {
-    border: 2px solid white;
-    width: 40%;
-    height: 100%;
-    display: flex;
-    flex-flow: column nowrap;
-    justify-content: flex-start;
-    align-items: center;
-    gap: 10px;
+    flex: 1;
+}
+
+
+.sectionButton {
+    padding: 6px;
+    flex: 1;
+    height: 65px;
+    width: 65px;
+    font-size: 2dvh;
+    border-radius: 10px;
 }
 
 .menuButton {
-    /* border: 2px solid white; */
-    border-radius: 5px;
-    width: 85%;
-    height: 10dvh;
-    font-size: 2.75dvw;
+    border-radius: 10px;
+    padding: 7px;
+    font-size: 2dvh;
+}
+
+
+
+.glassMorphBlack,
+.glassMorphWhite {
+    transition: background-color 0.5s ease, color 0.5s ease, border 0.5s ease;
+}
+
+.glassMorphWhite {
+    background-color: transparent;
+    backdrop-filter: blur(2px);
+    background-color: #ffffff77;
+    color: black;
+    border: 1px solid white;
+}
+
+.glassMorphBlack {
+    background-color: transparent;
+    backdrop-filter: blur(2px);
+    background-color: #00000077;
+    color: white;
+    border: 1px solid gold;
 }
