--- a/src/pages/galleryPage/galleryPage.css
+++ b/src/pages/galleryPage/galleryPage.css
@@ -63,7 +63,7 @@
 }
 
 .sectionButtons {
-    border: 2px solid goldenrod;
+    /* border: 2px solid goldenrod; */
     width: 100%;
     height: 15dvh;
     display: flex;
@@ -74,7 +74,7 @@
 }
 
 .contentContainer {
-    border: 2px solid pink;
+    /* border: 2px solid pink; */
     position: relative;
     flex: 1;
     width: 95%;
@@ -89,7 +89,7 @@
 .displayButtons {
     /* border: 2px solid greenyellow; */
     position: absolute;
-    top: 7%;
+    top: 10%;
     right: 5%;
     width: 25%;
     height: 35%;
@@ -101,9 +101,9 @@
 }
 
 .displayContent {
-    border: 2px solid lime;
+    /* border: 2px solid lime; */
     width: 100%;
-    height: 52%;
+    height: 43%;
     display: flex;
     flex-flow: column nowrap;
     justify-content: flex-start;
@@ -118,7 +118,7 @@
     /* padding: 2dvh; */
     object-fit: contain;
     position: absolute;
-    top: 3%;
+    top: 4%;
     left: -2%;
 }
 
